--- a/ConsoleApp1/NeuralNetwork.csproj
+++ b/ConsoleApp1/NeuralNetwork.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Lib\Layers\Convolutional\LeakyReluLayer.cs" />
     <Compile Include="Lib\Layers\Convolutional\ConvolutionalLayer.cs" />
     <Compile Include="Lib\Layers\Convolutional\FullyConnectedLayer.cs" />
+    <Compile Include="Lib\Layers\Convolutional_2\ConvolutionalLayer.cs" />
     <Compile Include="Lib\Layers\DropoutLayer.cs" />
     <Compile Include="Lib\Layers\LeakyReluLayer.cs" />
     <Compile Include="Lib\Layers\ReluLayer.cs" />
